# TER_HittingSet

./: .gitignore  README.md  a_faire.md
C/: CMakeLists.txt  HGraph.c  HGraph.h  List.c  List.h  comp_def.txt  example.txt  from_empty.py  gen.py  graph_reader.c  graph_reader.h  main.c  naive.c  naive.h  setup.py  test.c  test.py  variable_based.py  verificateur.py
C/algorithms/: BMR.c  BMR.h  BMR_bitmap.c  BMR_bitmap.h  BMR_simplifie.c  DL.c  DL.h  DL_BMR.c  DL_BMR.h  DL_BMR_bitmap.c  DL_BMR_bitmap.h  DL_Trgf.c  DL_Trgf.h  DL_Trgn.c  DL_Trgn.h  DL_fopti.c  DL_fopti.h  DL_foptiv.c  DL_foptiv.h  DL_opti.c  DL_opti.h  DL_singl.c  DL_singl.h  algos.h  berge.c  berge.h  berge_bitmap.c  berge_bitmap.h  naive.c  naive.h  naive_from_full.c  naive_from_full.h
C/data/: SDTH62.txt  TH100.txt  example.txt
C/data/tests/inputs/: singl.txt
C/structures/: Bitmap.c  Bitmap.h  List.c  List.h  Queue.c  Queue.h
C/transversal_enumeration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/: BMR.py  DL.py  generate_random_hypergraph.py  graph_reader.py  main.py  matching.py  matching_it.py  utils.py
naive_python/: from_empty.py  from_full.py
